@@ -124,7 +124,7 @@ int main(int argc, char **argv)
              close_ckd_image(cif);
              cif = 0;
          }
-         cif = open_ckd_image(fn, sfn, O_RDONLY | O_BINARY, 0);
+         cif = open_ckd_image(fn, sfn, O_RDONLY | O_BINARY, IMAGE_OPEN_NORMAL);
          if (!cif)
              fprintf(stderr, MSG(HHC02403, "E", *argv));
      }
