@@ -208,7 +208,7 @@ int do_ls_cif(CIFBLK *cif)
 
 int do_ls(char *file, char *sfile)
 {
-    CIFBLK *cif = open_ckd_image(file, sfile, O_RDONLY|O_BINARY, 0);
+    CIFBLK *cif = open_ckd_image(file, sfile, O_RDONLY|O_BINARY, IMAGE_OPEN_NORMAL);
 
     if (!cif || do_ls_cif(cif) || close_ckd_image(cif))
         return -1;
