@@ -65,6 +65,7 @@ and how they are used.
 
     <a href="#CCKD">CCKD</a>       RA=2,RAQ=4,RAT=2,WR=2,GCINT=10,GCPARM=0,NOSTRESS=0,TRACE=0,FREEPEND=-1
     <a href="#SHRDPORT">SHRDPORT</a>   3990
+    <a href="#SHOWDVOL1">SHOWDVOL1</a>  NO
 
     <a href="#PANTITLE">PANTITLE</a>   "My own private MAINFRAME!"
     <a href="#PANRATE">PANRATE</a>    FAST
@@ -1070,6 +1071,18 @@ and how they are used.
     <a href="#HTTPROOT">HTTP server facility</a>
     as well as commands entered via
     <a href="hercinst.html#RCFILE">.rc "run command"</a> scripts.
+    <p>
+
+<a name="SHOWDVOL1"></a>
+<dt><code>SHOWDVOL1 &nbsp; [ <u>NO</u> &#124; YES &#124; ONLY ]</code>
+<dd><p>
+    Indicates whether to show the dasd VOL1 labels (volser) in the device list
+    display. 'YES' shows the volser in addition to the usual filename, whereas
+    'NO' shows the device list in a traditional filename only format. The 'ONLY'
+    option shows only the volser; the filename is not shown at all. The default
+    is 'NO', which results in a traditional device list display. This statement
+    has no effect when no operand is given and instead simply echos the current
+    setting to the console.
     <p>
 
 <a name="SHRDPORT"></a>
