@@ -799,6 +799,7 @@ panel commands.
      sfk          Check shadow files
      sh           Shell command
      shcmdopt     Set diag8 sh option
+     showdvol1    Enable showing of dasd volsers in device list
      shrd         shrd command
      shrdport     Set shrdport value
      sizeof       Display size of structures
